# GifCap

./: .gitignore  BUILDING.md  Cargo.toml  README.md  RELEASE_NOTES.md  bsums.xyz.gifcap.yml  build-linux.sh  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.sh  installer.nsi
.github/workflows/: build_macos.yml
AppDir/: .DirIcon  AppRun  bsums.xyz.gifcap.desktop
appimage/: build.sh
debian/: changelog  control  rules
flatpak/: bsums.xyz.gifcap.yml  com.gifcap.GifCap.yml
macos/: Info.plist
reference_python/: LICENSE  README.md  requirements.txt
reference_python/appimage/: build.sh  gifcap.spec
reference_python/resources/: bsums.xyz.gifcap.desktop
reference_python/reverse-engineering/: executable-analysis.md
reference_python/src/: gif_encoder.py  settings_manager.py
resources/: bsums.xyz.gifcap.desktop  com.gifcap.GifCap.desktop
reverse-engineering/: decompilation-notes.md  findings.md  wayland-support.md
src/: capture_engine.py  cursor_capture.py  editor_window.py  frame_storage.py  main.py  main.rs  recorder_window.py  recording.rs  wayland_capture.py
src/capture/: mod.rs
src/ui/: editor.rs  mod.rs  recorder.rs
